# geanyplusplus

./: .gitignore  Makefile.am  autogen.sh  configure.ac  geany++.pc.in
doc/: Doxyfile.in  Makefile.am
geany++/: Makefile.am  build.cpp  build.hpp  common.hpp  demo.cpp  document.cpp  document.hpp  editor.cpp  editor.hpp  filetype.cpp  filetype.hpp  geany.cpp  geany.hpp  geany_p.hpp  iplugin.cpp  iplugin.hpp  pluginconfig.cpp  pluginconfig.hpp  project.cpp  project.hpp  proxy.cpp  scintilla.cpp.in  scintilla.hpp.in  tagmanager.cpp  tagmanager.hpp  templateprefs.cpp  templateprefs.hpp  ui.cpp  ui.hpp  utils.hpp
m4/: geany.m4
plugins/: Makefile.am
plugins/demo++/: Makefile.am  demo++.cpp  demo++.plugin
plugins/plugingen/: Makefile.am  gendialog.cpp  gendialog.hpp  genprocessor.cpp  genprocessor.hpp  plugingen.cpp  plugingen.glade  plugingen.plugin
plugins/plugingen/templates/autotools/: ${plugin_identifier}.cpp.in  ${plugin_identifier}.geany.in  ${plugin_identifier}.plugin.in  .gitignore.in  Makefile.am  Makefile.am.in  README.in  autogen.sh.in  configure.ac.in
scripts/: Face.py  Scintilla.iface.bugs  sciface.py  scigen.py
