templatedir = $(pkgdatadir)/templates/autotools
template_DATA = \
	$${plugin_identifier}.cpp.in \
	$${plugin_identifier}.geany.in \
	$${plugin_identifier}.plugin.in \
	.gitignore.in \
	COPYING.in \
	Makefile.am.in \
	README.in \
	autogen.sh.in \
	configure.ac.in

templatem4dir = $(templatedir)/m4
templatem4_DATA = \
	m4/ax_cxx_compile_stdcxx.m4.in \
	m4/ax_cxx_compile_stdcxx_11.m4.in
